# ServerBee

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.release  Dockerfile.server  ENV.md  Makefile  README.md  README.zh-CN.md  TESTING.md  biome.json  conductor.json  docker-compose.yml  package.json  skills-lock.json  tsconfig.json  turbo.json
crates/agent/: Cargo.toml
crates/agent/src/: capability_policy.rs  config.rs  file_manager.rs  fingerprint.rs  main.rs  network_prober.rs  pinger.rs  probe_utils.rs  rebind.rs  register.rs  reporter.rs  terminal.rs  traceroute.rs  upgrade.rs
crates/agent/src/capability_grants/: cli.rs  mod.rs  store.rs  supervisor.rs
crates/agent/src/collector/: cpu.rs  disk.rs  disk_io.rs  gpu.rs  load.rs  memory.rs  mod.rs  network.rs  process.rs  temperature.rs  tests.rs  virtualization.rs
crates/agent/src/docker/: containers.rs  events.rs  logs.rs  mod.rs  networks.rs  volumes.rs
crates/agent/src/firewall/: guardrail.rs  manager.rs  mod.rs  nft.rs
crates/agent/src/ip_quality/: http.rs  mod.rs  rule_engine.rs  ssrf.rs
crates/agent/src/ip_quality/detectors/: chatgpt.rs  (+9 more)
crates/agent/src/security/: conntrack_watcher.rs  first_seen_store.rs  journal_watcher.rs  manager.rs  mod.rs  scan_detector.rs  ssh_detector.rs  ssh_parser.rs
crates/agent/src/testdata/: test_cert.der
crates/server/: Cargo.toml  build.rs
crates/server/examples/: dump_openapi.rs
crates/server/src/: config.rs  dev_demo.rs  error.rs  lib.rs  main.rs  openapi.rs  state.rs  test_utils.rs
crates/server/src/entity/: agent_enrollment.rs  alert_rule.rs  alert_state.rs  api_key.rs  audit_log.rs  block_list.rs  config.rs  custom_theme.rs  dashboard.rs  dashboard_widget.rs  device_token.rs  docker_event.rs  gpu_record.rs  incident.rs  incident_update.rs  ip_quality_setting.rs  ip_quality_snapshot.rs  ip_risk_cache.rs  maintenance.rs  mobile_device_registration.rs  mobile_push_delivery.rs  mobile_session.rs  mod.rs  network_probe_config.rs  network_probe_record.rs  network_probe_record_hourly.rs  network_probe_target.rs  notification.rs  notification_group.rs  oauth_account.rs  ping_record.rs  ping_task.rs  record.rs  record_hourly.rs  recovery_job.rs  security_event.rs  server.rs  server_group.rs  server_tag.rs  service_monitor.rs  (+16 more)
crates/server/src/middleware/: auth.rs
crates/server/src/migration/: m20260312_000001_init.rs  m20260312_000002_oauth.rs  m20260314_000003_add_capabilities.rs  m20260315_000004_network_probe.rs  m20260315_000005_update_builtin_targets.rs  m20260317_000005_traffic_and_scheduled_tasks.rs  m20260318_000006_docker_support.rs  m20260319_000007_service_monitor.rs  m20260319_000008_disk_io_records.rs  m20260320_000009_dashboard.rs  m20260320_000009_status_page.rs  m20260320_000010_dashboard.rs  m20260321_000011_status_page_uptime_thresholds.rs  m20260327_000012_records_hourly_unique.rs  m20260328_000013_mobile_auth.rs  m20260328_000013_session_must_change_password.rs  m20260329_000013_add_server_fingerprint.rs  m20260329_000013_create_mobile_session.rs  m20260329_000014_add_session_source.rs  m20260329_000014_create_mobile_session.rs  m20260329_000015_add_session_source.rs  m20260329_000015_create_device_token.rs  m20260329_000016_create_device_token.rs  m20260416_000017_create_recovery_job.rs  m20260416_000017_migrate_email_to_resend.rs  m20260416_000018_migrate_email_to_resend.rs  m20260430_000019_create_custom_theme.rs  m20260430_000020_add_status_page_theme_ref.rs  m20260430_000021_custom_theme_ref_integrity.rs  m20260517_000022_create_agent_enrollment.rs  m20260517_000023_add_must_change_password.rs  m20260521_000024_create_security_event.rs  m20260521_000025_extend_alert_state_event_key.rs  m20260521_000026_backfill_capability_default.rs  m20260521_000027_create_block_list.rs  m20260521_000028_extend_alert_rule_actions.rs  m20260522_000029_ip_quality.rs  m20260522_000030_status_page_show_ip_quality.rs  m20260523_000031_default_caps_add_firewall_ip_quality.rs  m20260524_000032_create_traceroute_record.rs  (+13 more)
crates/server/src/presets/: mod.rs  targets.toml
crates/server/src/router/: mod.rs  static_files.rs  system.rs  utils.rs
crates/server/src/service/: agent_manager.rs  alert.rs  apns.rs  asn.rs  audit.rs  auth.rs  config.rs  cost.rs  custom_theme.rs  dashboard.rs  db_error.rs  docker.rs  docker_viewer.rs  enrollment.rs  file_transfer.rs  firewall.rs  geoip.rs  high_risk_audit.rs  incident.rs  ip_quality.rs  ip_risk.rs  jwt.rs  maintenance.rs  mobile_alert.rs  mobile_auth.rs  mobile_device.rs  mod.rs  network_probe.rs  notification.rs  oauth.rs  ping.rs  public_status.rs  push.rs  record.rs  recovery_job.rs  recovery_lock.rs  recovery_merge.rs  security.rs  server.rs  server_tag.rs  (+12 more)
crates/server/src/task/: aggregator.rs  alert_evaluator.rs  cleanup.rs  mobile_session_cleanup.rs  mod.rs  offline_checker.rs  push_receipt_checker.rs  record_writer.rs  service_monitor_checker.rs  session_cleaner.rs  task_scheduler.rs  upgrade_timeout.rs
crates/server/tests/: agent_docker_extra.rs  agent_file_ops.rs  agent_messages.rs  agent_registration_integration.rs  agent_ws_dispatch.rs  api_key_admin_only.rs  browser_ws.rs  cost_integration.rs  custom_theme_integration.rs  docker_integration.rs  email_migration_integration.rs  integration.rs  ip_quality_integration.rs  mobile_push_integration.rs  notification_update_integration.rs  public_status_anonymous.rs  public_status_gating.rs  public_status_ip_quality_redaction.rs  public_status_redaction.rs  public_status_redaction_authenticated.rs  public_status_scope.rs  router_admin_extra.rs  router_alerting.rs  router_auth_user.rs  router_authtask_extra.rs  router_content_admin.rs  router_file_extra.rs  router_geo_servers.rs  router_misc_endpoints.rs  router_mobile.rs  router_monitoring.rs  router_probes_extra.rs  router_security_rate.rs  router_server_crud.rs  router_server_extra.rs  router_server_extra2.rs  router_smoke.rs  router_static_and_misc.rs  router_widget_dashboard.rs  spa_theme_integration.rs  (+4 more)
crates/server/tests/common/: mod.rs
(+1273 files in other folders)
