[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/server",
    "crates/agent",
]

[workspace.package]
version = "0.8.10"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ZingerLittleBee/ServerBee"

[workspace.dependencies]
serverbee-common = { path = "crates/common", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
chrono-tz = "0.10"
