[package]
name = "serverbee-agent"
version.workspace = true
edition.workspace = true

[features]
gpu = ["nvml-wrapper"]

[dependencies]
serverbee-common.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true

sysinfo = "0.33"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
figment = { version = "0.10", features = ["toml", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures-util = "0.3"
url = "2"
rand = "0.8"
portable-pty = "0.8"
base64 = "0.22"
sha2 = "0.10"
nvml-wrapper = { version = "0.10", optional = true }
