[package]
name = "serverbee-server"
version.workspace = true
edition.workspace = true

[dependencies]
serverbee-common = { workspace = true, features = ["utoipa"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono-tz.workspace = true

axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
dashmap = "6"
figment = { version = "0.10", features = ["toml", "env"] }
hickory-resolver = "0.25"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tokio-cron-scheduler = "0.13"
cron = "0.13"
async-trait = "0.1"
futures-util = "0.3"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
maxminddb = "0.27"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
oauth2 = "4"
toml = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
whois-rust = "1"
x509-parser = "0.16"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1"
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tempfile = "3"
futures-util = "0.3"
